--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -8,86 +8,98 @@
 
     <ImageButton
         android:id="@+id/mapH"
-        android:layout_width="385dp"
-        android:layout_height="332dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/round_corners"
         android:contentDescription="@string/map"
         android:scaleType="fitCenter"
         android:src="@drawable/map2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager"
+        app:layout_constraintVertical_bias="0.472"
+        app:layout_constraintWidth_percent="0.9" />
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="250dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#FCAC32"
         android:contentDescription="@string/logo"
         android:scaleType="fitStart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        motion:srcCompat="@drawable/quickbox_logo" />
+        motion:srcCompat="@drawable/quickbox_logo"
+        app:layout_constraintHeight_percent="0.28"
+        app:layout_constraintWidth_percent="1"/>
 
     <ImageButton
         android:id="@+id/profileH"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="56dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#FBAB32"
         android:backgroundTint="#FBAB32"
         android:contentDescription="@string/avatar"
         android:scaleType="centerCrop"
         android:src="@drawable/avatar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHorizontal_bias="0.79"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.094"
+        app:layout_constraintWidth_percent="0.20"
         tools:srcCompat="@tools:sample/avatars"
         tools:visibility="visible" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.2"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/history"
+        app:layout_constraintWidth_percent="0.9"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/history"
-        android:layout_width="360dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="18dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        android:autoSizeTextType="uniform"
         android:text="@string/create_delivery"
         android:textAlignment="center"
-        android:textSize="28dp"
-        app:layout_constraintBottom_toTopOf="@+id/viewPager"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.07"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo"
+        app:layout_constraintWidth_percent="0.9"
         tools:ignore="VisualLintButtonSize" />
 
     <TextView
         android:id="@+id/nameH"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="228dp"
-        android:layout_marginTop="20dp"
-        android:textSize="24sp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:autoSizeTextType="uniform"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.03"
+        app:layout_constraintHorizontal_bias="0.873"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileH" />
+        app:layout_constraintTop_toBottomOf="@+id/profileH"
+        app:layout_constraintVertical_bias="0.042"
+        app:layout_constraintWidth_percent="0.4" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
