--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -7,135 +7,152 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="411dp"
-        android:layout_height="275dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#FCAE31"
         android:contentDescription="@string/logo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/quickbox_logo" />
+        app:srcCompat="@drawable/quickbox_logo"
+        app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintWidth_percent="1.0"/>
 
     <Button
         android:id="@+id/signinB"
-        android:layout_width="320dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="640dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:text="@string/sign_in"
-        android:textSize="24sp"
+        android:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
+        app:layout_constraintVertical_bias="0.305"
+        app:layout_constraintWidth_percent="0.75" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
         style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
-        android:layout_width="310dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:ems="10"
         android:hint="@string/enter_your_password"
         android:hyphenationFrequency="normal"
         android:importantForAutofill="no"
         android:inputType="textPassword"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="16sp"
+        android:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintVertical_bias="0.09"
+        app:layout_constraintWidth_percent="0.75" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
         style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
-        android:layout_width="310dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:ems="10"
         android:hint="@string/enter_your_email"
         android:hyphenationFrequency="normal"
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#000000"
-        android:textSize="16sp"
+        android:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcome" />
+        app:layout_constraintTop_toBottomOf="@+id/welcome"
+        app:layout_constraintVertical_bias="0.142"
+        app:layout_constraintWidth_percent="0.75" />
 
     <TextView
         android:id="@+id/signin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="304dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:autoSizeTextType="uniform"
         android:text="@string/sign_in"
-        android:textSize="38sp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/logo"
+        app:layout_constraintVertical_bias="0.076"
+        app:layout_constraintWidth_percent="0.4" />
 
     <TextView
         android:id="@+id/welcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="4dp"
         android:text="@string/welcome_back_you_ve_been_missed"
-        android:textSize="16sp"
+        android:textAlignment="center"
+        app:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.04"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signin" />
+        app:layout_constraintTop_toBottomOf="@+id/signin"
+        app:layout_constraintWidth_percent="0.7" />
 
 
     <TextView
         android:id="@+id/signupB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="122dp"
+        android:autoSizeTextType="uniform"
         android:clickable="true"
         android:minHeight="48dp"
         android:onClick="signup"
         android:text="@string/sign_up"
-        android:textSize="20sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/createacc"
+        app:layout_constraintHeight_percent="0.03"
+        app:layout_constraintHorizontal_bias="0.843"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signinB"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.122"
+        app:layout_constraintWidth_percent="0.18"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/createacc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="143dp"
         android:text="@string/don_t_have_account_yet"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/signupB"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.03"
+        app:layout_constraintHorizontal_bias="0.29"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signinB" />
+        app:layout_constraintTop_toBottomOf="@+id/signinB"
+        app:layout_constraintVertical_bias="0.122"
+        app:layout_constraintWidth_percent="0.55" />
 
     <ProgressBar
         android:id="@+id/progressBarUp"
         android:layout_width="95dp"
         android:layout_height="95dp"
         android:layout_gravity="center"
-        android:layout_marginEnd="156dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.761"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
+        app:layout_constraintVertical_bias="0.298"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
