--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -108,21 +108,21 @@
         android:id="@+id/signupB"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
         android:autoSizeTextType="uniform"
         android:clickable="true"
         android:minHeight="48dp"
         android:onClick="signup"
         android:text="@string/sign_up"
+        android:textAlignment="viewStart"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.03"
-        app:layout_constraintHorizontal_bias="0.843"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/createacc"
         app:layout_constraintTop_toBottomOf="@+id/signinB"
-        app:layout_constraintVertical_bias="0.122"
-        app:layout_constraintWidth_percent="0.18"
+        app:layout_constraintVertical_bias="0.118"
+        app:layout_constraintWidth_percent="0.2"
         tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
@@ -130,16 +130,16 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="16dp"
+        android:autoSizeTextType="uniform"
         android:text="@string/don_t_have_account_yet"
         android:textAlignment="center"
-        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.03"
-        app:layout_constraintHorizontal_bias="0.29"
+        app:layout_constraintHorizontal_bias="0.301"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signinB"
-        app:layout_constraintVertical_bias="0.122"
+        app:layout_constraintVertical_bias="0.118"
         app:layout_constraintWidth_percent="0.55" />
 
     <ProgressBar
