--- a/app/src/main/res/layout/language.xml
+++ b/app/src/main/res/layout/language.xml
@@ -16,8 +16,26 @@
         app:layout_constraintHeight_percent="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/english"
-        app:layout_constraintVertical_bias="0.499"
+        app:layout_constraintVertical_bias="0.351"
         app:layout_constraintWidth_percent="0.25"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/currLS"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:autoSizeTextType="uniform"
+        android:text="@string/currentLang"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.03"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.144"
+        app:layout_constraintWidth_percent="0.8"
         tools:visibility="visible" />
 
     <Button
@@ -31,15 +49,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.08"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slovak"
-        app:layout_constraintVertical_bias="0.079"
+        app:layout_constraintTop_toBottomOf="@+id/currLE"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintWidth_percent="0.8" />
 
     <Button
         android:id="@+id/slovak"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
         android:autoSizeTextType="uniform"
         android:text="@string/slovak"
         android:textAlignment="center"
@@ -47,8 +64,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.08"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.168"
+        app:layout_constraintTop_toBottomOf="@+id/currLS"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintWidth_percent="0.8" />
 
     <Button
@@ -64,18 +81,21 @@
         app:layout_constraintVertical_bias="0.035" />
 
     <TextView
-        android:id="@+id/currL"
+        android:id="@+id/currLE"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:autoSizeTextType="uniform"
         android:text="@string/currentLang"
         android:textAlignment="center"
+        android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.025"
+        app:layout_constraintHeight_percent="0.03"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.148"
-        app:layout_constraintWidth_percent="0.8" />
+        app:layout_constraintTop_toBottomOf="@+id/slovak"
+        app:layout_constraintVertical_bias="0.059"
+        app:layout_constraintWidth_percent="0.8"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
