create delivery first

--- a/app/src/main/res/layout-land/language.xml
+++ b/app/src/main/res/layout-land/language.xml
@@ -52,7 +52,7 @@
         app:layout_constraintWidth_percent="0.35" />
 
     <Button
-        android:id="@+id/backL"
+        android:id="@+id/backD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
